--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^4.0.1",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "zustand": "^3.6.5"
   },
   "scripts": {
     "start": "react-scripts start",
