--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,18 +39,15 @@ jobs:
       - uses: actions/checkout@v2.4.0
       - uses: actions/setup-node@v2.4.1
         with:
-          node-version: 14.x
-      - uses: expo/expo-github-action@v5.1.1
-        with:
-          expo-version: 4.x
+          node-version: '14'
       - run: npm install
-      - run: expo build:web
+      - run: npm run build
       - run: npm install -g firebase-tools
       - run: firebase deploy --token "${{ secrets.FIREBASE_DEPLOY_TOKEN }}" --non-interactive
   success:
     name: Slack Success Notification
     if: ${{ success() }}
-    needs: [build, cypress]
+    needs: [deploy]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.4.0
