--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
   success:
     name: Slack Success Notification
     if: ${{ success() }}
-    needs: [deploy]
+    #needs: [build, cypress]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.4.0
@@ -62,7 +62,7 @@ jobs:
   failure:
     name: Slack Failure Notification
     if: ${{ failure() }}
-    needs: [build, cypress]
+    #needs: [build, cypress]
     runs-on: ubuntu-latest
     steps:
       - name: Slack Notification Failure
@@ -76,7 +76,7 @@ jobs:
   cancelled:
     name: Slack Cancelled Notification
     if: ${{ cancelled() }}
-    needs: [build, cypress]
+    #needs: [build, cypress]
     runs-on: ubuntu-latest
     steps:
       - name: Slack Notification Cancelled
