--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,11 +39,12 @@ jobs:
       - uses: actions/setup-node@v2.4.1
         with:
           node-version: '14'
-      - if: ${{ github.ref_name == 'main' }}
       - run: npm install
       - run: npm run build
       - run: npm install -g firebase-tools
-      - run: firebase deploy --token "${{ secrets.FIREBASE_DEPLOY_TOKEN }}" --non-interactive
+      - name: Firebase deploy
+        if: ${{ github.ref_name == 'main' }}
+        run: firebase deploy --token "${{ secrets.FIREBASE_DEPLOY_TOKEN }}" --non-interactive
   success:
     name: Slack Success Notification
     if: ${{ success() }}
