--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,16 +35,16 @@ jobs:
     needs: [build, cypress]
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2.4.0
-      - uses: actions/setup-node@v2.4.1
+      - name: Firebase deploy
+        if: ${{ github.ref_name == 'main' }}
+        uses: actions/checkout@v2.4.0
+        uses: actions/setup-node@v2.4.1
         with:
           node-version: '14'
       - run: npm install
       - run: npm run build
       - run: npm install -g firebase-tools
-      - name: Firebase deploy
-        if: ${{ github.ref_name == 'main' }}
-        run: firebase deploy --token "${{ secrets.FIREBASE_DEPLOY_TOKEN }}" --non-interactive
+      - run: firebase deploy --token "${{ secrets.FIREBASE_DEPLOY_TOKEN }}" --non-interactive
   success:
     name: Slack Success Notification
     if: ${{ success() }}
