--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,12 +39,18 @@ jobs:
       - uses: actions/setup-node@v2.4.1
         with:
           node-version: '14'
-      - name: Firebase deploy
+      - name: install
         if: ${{ github.ref_name == 'main' }}
         run: npm install
-      - run: npm run build
-      - run: npm install -g firebase-tools
-      - run: firebase deploy --token "${{ secrets.FIREBASE_DEPLOY_TOKEN }}" --non-interactive
+      - name: buil
+        if: ${{ github.ref_name == 'main' }}
+        run: npm run build
+      - name: install firebase tools
+        if: ${{ github.ref_name == 'main' }}
+        run: npm install -g firebase-tools
+      - name: Firebase deploy
+        if: ${{ github.ref_name == 'main' }}
+        run: firebase deploy --token "${{ secrets.FIREBASE_DEPLOY_TOKEN }}" --non-interactive
   success:
     name: Slack Success Notification
     if: ${{ success() }}
