--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,13 +43,13 @@ jobs:
         if: ${{ github.ref_name == 'main' }}
         run: npm install
       - name: buil
-        if: ${{ github.ref_name == 'main' }}
+        if: ${{ success() }}
         run: npm run build
       - name: install firebase tools
-        if: ${{ github.ref_name == 'main' }}
+        if: ${{ success() }}
         run: npm install -g firebase-tools
       - name: Firebase deploy
-        if: ${{ github.ref_name == 'main' }}
+        if: ${{ success() }}
         run: firebase deploy --token "${{ secrets.FIREBASE_DEPLOY_TOKEN }}" --non-interactive
   success:
     name: Slack Success Notification
