--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,8 +78,8 @@ jobs:
       - uses: actions/setup-node@v2.4.1
         with:
           node-version: '14'
-      - run: npm install
-      - run: npm run build
+      # - run: npm install
+      # - run: npm run build
       - run: npm install -g firebase-tools
       - run: firebase deploy --token "${{ secrets.FIREBASE_DEPLOY_TOKEN }}" --non-interactive
       - name: slack failure
